<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">绿能租车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_main">首页</string>
    <string name="title_login">登录</string>
    <string name="order_charge_detail">充电桩订单详情</string>
    <string name="username">账号:</string>
    <string name="usernametxt">用户名:</string>
    <string name="userpass">密码:</string>
    <string name="register">注册</string>
    <string name="to_register">免费注册</string>
    <string name="forgetpass">忘记密码?</string>
    <string name="title_get_pwd">找回密码</string>
    <string name="username_hint">请输入手机号</string>
    <string name="userpass_hint">请输入6-10位密码</string>
    <string name="username_text_hint">请输入用户名</string>
    <string name="skip_text">跳过</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_userpass">请输入密码</string>
    <string name="please_input_userpass_again">请确认密码</string>
    <string name="user_is_exist">用户名已存在</string>
    <string name="user_is_no_exist">用户名不存在</string>
    <string name="input_password">输入密码:</string>
    <string name="input_password_again">确认密码:</string>
    <string name="ver_code">验证码:</string>
    <string name="input_ver_code">输入验证码</string>
    <string name="please_input_ver_code">请输入验证码</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="err_ver_code">验证码错误</string>
    <string name="register_text1">注册即视为同意</string>
    <string name="register_text2">绿能租车协议</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancle">取消</string>
    <string name="change_pwd">修改密码</string>
    <string name="old_pwd">原密码:</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="new_pwd">新密码:</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="new_pwd_again">确认新密码:</string>
    <string name="input_new_pwd_again">请确认新密码</string>
    <string name="recharge">充值</string>
    <string name="my_wallet">我的钱包</string>
    <string name="integral">积分</string>
    <string name="fen">分</string>
    <string name="coupons">优惠券</string>
    <string name="zhang">张</string>
    <string name="mingxi">充值明细</string>
    <string name="mingxidetail">充值明细详情</string>
    <string name="weixin">微信支付</string>
    <string name="zhifubao">支付宝</string>
    <string name="money">金额</string>
    <string name="yuan">元</string>
    <string name="to_recharge">立即支付</string>
    <string name="my_money">当前余额</string>
    <string name="please_input_correct_phone">请输入正确的手机号</string>
    <string name="please_input__phone">请输入手机号</string>
    <string name="telephone">手机号:</string>
    <string name="email">邮箱:</string>
    <string name="my_address">地址:</string>
    <string name="my_information">个人资料</string>
    <string name="save">保存</string>
    <string name="about">关于我们</string>
    <string name="about_lvneng">关于绿能</string>
    <string name="car_rental">租车须知</string>
    <string name="exit">退出登录</string>
    <string name="order_car_detail">车辆订单详情</string>
    <string name="map">地图</string>
    <string name="info_camera_exception">二维码扫描异常</string>
    <string name="yuyue">预约</string>
    <string name="quche">取车</string>
    <string name="zuche">立即租车</string>
    <string name="scan_use_car">扫码用车</string>
    <string name="scan_charge">扫码充电</string>
    <string name="input_charge_money">请输入充值金额</string>
    <string name="check_sdcard_fail">检测不到内存卡</string>
    <string name="drive_card">驾驶证:</string>
    <string name="id_card">身份证:</string>
    <string name="upload">上传</string>
    <string name="noupload">未上传</string>
    <string name="isupload">已上传</string>
    <string name="please_input_drive_image">上传驾驶证图片</string>
    <string name="please_input_idcard_image">上传身份证图片</string>
    <string name="click_exit">再次点击退出程序</string>
    <string name="enter">进入</string>
    <string name="jpush_regist_failed">推送注册失败</string>
    <string name="message_detail">消息详情</string>
    <string name="charge_detail">充电信息</string>
    <string name="sure_charging">确认充电</string>
    <string name="please_input_time">请输入时间</string>
    <string name="please_input_dgree">请输入度数</string>
    <string name="network_is_not_connected">请检查网络状态</string>
    <string name="pwd_is_no">密码长度为6~20个字之间</string>
    <string name="car_progress">租车流程</string>
    <string name="my_name">真实姓名:</string>
    <string name="my_name_hint">请输入真实姓名</string>
    <string name="id_number">身份证号:</string>
    <string name="id_number_hint">请输入身份证号</string>
    <string name="driving_number">驾驶证号:</string>
    <string name="driving_number_hint">请输入驾驶证号</string>
    <string name="order_detail">订单详情</string>
    <string name="mine">我的</string>

</resources>