<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <RelativeLayout
            android:id="@+id/register_name_relat"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/register_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/register_name_left_text"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/username_hint"
                android:paddingRight="35dp"
                android:singleLine="true"
                android:textColor="#3c3c3c"
                android:textColorHint="#b3b3b3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/register_name_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dip"
                android:text="@string/telephone"
                android:textSize="@dimen/text_h2" />

            <ImageView
                android:id="@+id/register_name_del"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:contentDescription="@null"
                android:src="@drawable/login_del"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:id="@+id/register_lin0"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/register_name_relat"
            android:background="@color/line_bg" />
        
         <RelativeLayout
            android:id="@+id/register_user_name_relat"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/register_lin0"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/register_user_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/register_user_name_left_text"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/username_text_hint"
                android:paddingRight="35dp"
                android:singleLine="true"
                android:textColor="#3c3c3c"
                android:textColorHint="#b3b3b3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/register_user_name_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dip"
                android:text="@string/usernametxt"
                android:textSize="@dimen/text_h2" />

            <ImageView
                android:id="@+id/register_user_name_del"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:contentDescription="@null"
                android:src="@drawable/login_del"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:id="@+id/register_lin1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/register_user_name_relat"
            android:background="@color/line_bg" />

        <RelativeLayout
            android:id="@+id/register_pass_relat"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/register_lin1"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/register_pass_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/register_pass_left_text"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/userpass_hint"
                android:paddingRight="35dp"
                android:singleLine="true"
                android:textColor="#3c3c3c"
                android:textColorHint="#b3b3b3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/register_pass_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dip"
                android:text="@string/userpass"
                android:textSize="@dimen/text_h2" />

            <ImageView
                android:id="@+id/register_pass_del"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:contentDescription="@null"
                android:src="@drawable/login_del"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:id="@+id/register_lin2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/register_pass_relat"
            android:background="@color/line_bg" />

        <RelativeLayout
            android:id="@+id/register_code_relat"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/register_lin2"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/register_code_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dip"
                android:text="@string/ver_code"
                android:textSize="@dimen/text_h2" />

            <EditText
                android:id="@+id/register_code_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/register_code_left_text"
                android:layout_toLeftOf="@+id/get_register_code_text"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_ver_code"
                android:paddingRight="35dp"
                android:singleLine="true"
                android:textColor="#3c3c3c"
                android:textColorHint="#b3b3b3"
                android:textSize="16sp" />
            <View
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/get_register_code_text"
                android:background="@color/line_bg" />

            <TextView
                android:id="@+id/get_register_code_text"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/get_ver_code"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_h4" />
            
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_select"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/register_text1"
            android:textColor="#555555" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text1"
            android:text="@string/register_text2"
            android:textColor="#31A3D9" />
    </RelativeLayout>

</LinearLayout>