<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/logLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <RelativeLayout
            android:id="@+id/layout_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/username_layout"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <EditText
                    android:id="@+id/register_name_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/register_name_left_text"
                    android:layout_toLeftOf="@+id/register_name_del"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/username_hint"
                    android:paddingRight="35dp"
                    android:singleLine="true"
                    android:textColor="#3c3c3c"
                    android:textColorHint="#b3b3b3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/register_name_left_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="7dip"
                    android:text="@string/username"
                    android:textSize="@dimen/text_h2" />

                <ImageView
                    android:id="@+id/register_name_del"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/icon_moreuser"
                    android:contentDescription="@null"
                    android:src="@drawable/login_del"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/icon_moreuser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/moreuser_down"
                    android:contentDescription="@null" />
            </RelativeLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/username_layout"
                android:background="@color/line_bg" />

            <RelativeLayout
                android:id="@+id/password_layout"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/line1"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imgLock"
                    android:background="@null"
                    android:gravity="center_vertical|left"
                    android:hint="@string/userpass_hint"
                    android:inputType="textPassword"
                    android:paddingRight="35dip"
                    android:singleLine="true"
                    android:textColor="#3c3c3c"
                    android:textColorHint="#b3b3b3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/imgLock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="7dip"
                    android:text="@string/userpass"
                    android:textSize="@dimen/text_h2" />

                <ImageView
                    android:id="@+id/imgFooter_del"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/login_del"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/password_layout"
                android:background="@color/line_bg" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_list_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_account"
            android:layout_marginTop="-50dip"
            android:visibility="gone" >
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_select"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/regiest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/to_register"
            android:textColor="#555555" />

        <TextView
            android:id="@+id/forgetpass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:text="@string/forgetpass"
            android:textColor="#555555" />
    </RelativeLayout>

</LinearLayout>